# AgeRx-Biomarker-Recommender

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: biomarker_lexicon.csv  seed_interventions.csv
data/embedding/: biomarker_semantic_texts.csv  contrastive_triplets.csv  embedding_manifest.csv  embedding_stats.csv  encoder_candidates.csv  intervention_texts.csv  model_comparison_runs.csv  molecular_biomarker_semantic_qrels.csv  molecular_interventions.csv  molecular_manifest.csv  molecular_model_registry.csv  molecular_pair_qrels.csv  molecule_to_biomarker_semantic_triplets.csv  molecule_to_pair_triplets.csv  molecule_to_surrogate_triplets.csv  pair_examples.csv  pair_texts.csv  queries.csv  query_qrels.csv  retrieval_corpus.csv  surrogate_texts.csv  text_model_registry.csv
data/processed/: article_surrogate_evidence.csv  bootstrap_intervention_surrogates.csv  compound_components.csv  compound_registry.csv  curated_biomarkers.csv  demo_queries.csv  intervention_catalog.csv
outputs/encoder_benchmark/: encoder_comparison.csv
scripts/: align_embeddings.py  benchmark_chemical_encoders.py  build_literature_dataset.py  embed_molecules.py  embed_texts.py  evaluate_twin_tower.py  fetch_compound_registry.py  populate_selfies_sequences.py  predict_biomarkers.py  prepare_embedding_materials.py  prepare_molecular_embedding_materials.py  run_retrieval_benchmark.py  seed_interventions_generate.py  train_twin_tower.py
tests/: test_alignment.py  test_dataset_builder.py  test_embedding_data.py  test_molecular_embedding_data.py  test_twin_tower.py
(+183 files in other folders)
